# Tucil1_13524038

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: board.cpp  board.h  solve.cpp  solve.h
src/utils/: file_utils.cpp  file_utils.h
test/solution/output/: solution_tc10x10.txt  solution_tc1x1.txt  solution_tc4x4.txt  solution_tc5x5.txt
test/solution/process/: protc10x10.txt  protc1x1.txt  protc4x4.txt  protc5x5.txt
test/testcase/: tc4x4.txt  tc5x5.txt  tcunsol8x8.txt
